build: update Java compatibility settings and refactor file operations
- Change Java toolchain configuration to target Java 8 while keeping source compatibility with Java 17
- Replace Files.readString/writeString with Fi wrapper methods for better cross-platform compatibility
- Update plugin list initialization to use Arrays.asList for Java 8 compatibility
- Modify stream collection to use Collectors.toList() for Java 8 compatibility